[project]
name = "mmisp-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11.0"


dependencies = [
  "fastapi==0.104.1",
  "SQLAlchemy==1.4.46",
  "pydantic==1.10.13",
  "uvicorn==0.24.0.post1",
]


[project.optional-dependencies]
dev = [
  "ruff==0.1.7",
  "mypy==1.8.0",
  "pre-commit==3.6.0",
]
