[project]
name = "mmisp-api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11.0"


dependencies = [
  "fastapi==0.104.1",
  "SQLAlchemy==1.4.46",
  "pydantic==1.10.13",
  "uvicorn==0.24.0.post1",
  "python-dotenv==1.0.0",
  "alembic==1.8.1",
  "mysql-connector-python",
]


[project.optional-dependencies]
dev = [
  "ruff==0.1.7",
  "mypy==1.8.0",
  "pre-commit==3.6.0",
  "pytest==8.0.0",
  "httpx==0.26.0",
]

[tool.ruff]
fix = true
line-length = 120
required-version = "0.1.7"
select = ["E", "F", "W", "I", "ICN", "ANN"]
ignore = ["ANN002", "ANN003", "ANN401"]
src = ["src"]
